deployments/templates/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api # this should match the selector in frontend-service.yml
  template:
    metadata:
      labels:
        app: api # this should match the selector in frontend-service.yml
    spec:
      serviceAccountName: rd-hr-smart-knowledge-management-dev-sa
      containers:
        - name: api
          image: ${REGISTRY}/${REPOSITORY}:${API_IMAGE_TAG}
          resources:
            requests:
              memory: "8Gi"
            limits:
              memory: "8Gi"
          ports:
            - containerPort: 8081
