deployments/templates/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend # this should match the pod label in frontend-deployment.yml
  ports:
    - name: https
      port: 8080
      targetPort: 8080
