deployments/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appingress
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: appingress-${NAMESPACE}-green
    external-dns.alpha.kubernetes.io/aws-weight: "100"

    # IP WHITELIST
    nginx.ingress.kubernetes.io/whitelist-source-range: 35.176.93.186/32,51.149.250.0/24

    # BASIC AUTH SETUP

    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic

    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth

    # message to display with an appropriate context as to why authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  ingressClassName: default
  tls:
    - hosts:
        - ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
  rules:
    - host: ${NAMESPACE}.apps.live.cloud-platform.service.justice.gov.uk
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service # this should match the metadata.name in service.yml
                port:
                  number: 8080
